# gnns-qec-decoding

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
configs/: data_generation.yaml  train.yaml  train_d3.yaml  train_d5.yaml  train_d7.yaml
data/: .gitignore
data/ci_shard/: detector_coords.npy  manifest.json  observables.npy  syndromes.npy
data/circuits/: d3_r3_p0_003.stim  d3_r3_p0_005.stim  d3_r3_p0_008.stim  d3_r3_p0_01.stim  d5_r5_p0_003.stim  d7_r7_p0_003.stim
data/eval/d3_p0_0030/: data.npz  manifest.json
data/eval/d3_p0_0050/: data.npz  manifest.json
data/eval/d3_p0_0080/: data.npz  manifest.json
data/eval/d3_p0_0100/: data.npz  manifest.json
data/eval/d5_p0_0030/: data.npz  manifest.json
data/eval/d5_p0_0050/: data.npz  manifest.json
data/eval/d5_p0_0080/: data.npz  manifest.json
data/eval/d5_p0_0100/: data.npz  manifest.json
data/eval/d7_p0_0030/: manifest.json
data/eval/d7_p0_0050/: data.npz  manifest.json
data/eval/d7_p0_0080/: data.npz  manifest.json
data/eval/d7_p0_0100/: data.npz  manifest.json
docs/: deployment.md  kernels.md  model.md  sampling.md
notebooks/: qec_data_visualization.ipynb
outputs/: .gitignore
scripts/: benchmark_all.py  benchmark_builder.py  benchmark_training.py  build_kernels.py  data_generation.py  eval_all_cases.py  eval_bp_osd.py  eval_gnn.py  eval_harness.py  eval_mwpm.py  eval_sanity.py  export_trt.py  generate_ci_shard.py  generate_circuits.py  generate_eval_sets.py  plot_calibration.py  plot_results.py  train_all_cases.py  train_gnn.py
src/: cli.py  constants.py  decoders.py  inference.py
src/benchmarks/: README.md  __init__.py  plots.py  runner.py
src/decoders/: __init__.py  base.py  bp_osd.py  mwpm.py  tensor_network.py
src/deploy/: README.md  __init__.py  engine.py  export_trt.py
src/evaluation/: __init__.py  calibration.py  evaluator.py  stats.py
src/gnn/: README.md  __init__.py  dataset.py  eval.py  evaluator.py  metrics.py  train.py  trainer.py
src/gnn/models/: __init__.py  decoder.py  encoder.py  heads.py  ops.py
src/kernels/: README.md  __init__.py  build.py  ops.py
src/kernels/cpp/: bindings.cpp  fused_edge_features.cu  fused_norm_residual.cu  graph_norm_bce.cu  warp_reduce.cuh
src/model/: __init__.py  dataset.py  decoder.py  encoder.py  ops.py  trainer.py
src/qec_generator/: README.md  __init__.py  bp.py  config.py  datasets.py  graph.py  sampler.py  utils.py
src/sampling/: __init__.py  graph.py  sampler.py  seeding.py
tests/: test_benchmark_plots.py  test_bp.py  test_bp_compute.py  test_bp_decoder.py  test_calibration.py  test_circuit_files.py  test_data_pipeline.py  test_decoders.py  test_deploy.py  test_encoder.py  test_eval_harness.py  test_eval_stats.py  test_feature_engineering.py  test_focal_loss.py  test_focal_sampler.py  test_heads.py  test_ops.py  test_ops_equivalence.py  test_pipeline_integration.py  test_sample_budget_trainer.py  test_stratified_subset.py  test_threshold_calibration.py  test_trainer_losses.py
