[project]
name = "gnns-qec-decoding"
version = "0.1.0"
description = "Decoding topological codes with GNNs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "networkx>=3.6.1",
    "numpy>=2.3.5",
    "pymatching>=2.3.1",
    "pyyaml>=6.0.3",
    "stim>=1.15.0",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]

[tool.uv]
package = true

[tool.isort]
src_paths = ["src/", "scripts/"]
profile = "black"
line_length = 88
lines_after_imports = 2

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
