[project]
name = "gnn-surface-code-decoding"
version = "0.1.0"
description = "GNN decoders for surface code quantum error correction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "networkx>=3.6.1",
    "ninja>=1.13.0",
    "numpy>=2.3.5",
    "pymatching>=2.3.1",
    "pyyaml>=6.0.3",
    "stim==1.15.0",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
    "torch-tensorrt>=2.9.0",
    "tensorrt-cu12>=10.0",
    "tensorrt-cu12-bindings>=10.0",
    "tensorrt-cu12-libs>=10.0",
    "tqdm>=4.67.1",
    "cudaq-qec-cu12>=0.5.0.post1",
    "ldpc>=2.4.1",
    "beliefmatching>=0.1.1",
]

[dependency-groups]
dev = [
    "matplotlib>=3.8",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.11",
]

[tool.uv]
package = true
index-strategy = "unsafe-best-match"

override-dependencies = [
    "tensorrt ; python_version < '0'",
    "tensorrt-cu13 ; python_version < '0'",
    "tensorrt-cu13-bindings ; python_version < '0'",
    "tensorrt-cu13-libs ; python_version < '0'",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch-tensorrt = { index = "pytorch-cu128" }

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
